// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolbar #blockTypes 1`] = `
<div
  className="editor__toolbar"
  role="toolbar"
>
  <div
    className="toolbar-group"
  />
  <div
    className="toolbar-group"
  >
    <Button
      active={false}
      icon={null}
      label="Test 1"
      name="TEST_1"
      onClick={[Function]}
      title={null}
    />
    <Button
      active={false}
      icon="icon-test-2"
      label="Test 2"
      name="TEST_2"
      onClick={[Function]}
      title={null}
    />
    <Button
      active={false}
      icon="icon-test-3"
      label="Test 3"
      name="TEST_3"
      onClick={[Function]}
      title={null}
    />
  </div>
</div>
`;

exports[`Toolbar #enableHorizontalRule 1`] = `
<div
  className="editor__toolbar"
  role="toolbar"
>
  <div
    className="toolbar-group"
  />
  <div
    className="toolbar-group"
  />
  <Button
    active={false}
    icon={null}
    label="HR"
    name="HORIZONTAL_RULE"
    onClick={[Function]}
    title="Horizontal line"
  />
</div>
`;

exports[`Toolbar #enableLineBreak 1`] = `
<div
  className="editor__toolbar"
  role="toolbar"
>
  <div
    className="toolbar-group"
  />
  <div
    className="toolbar-group"
  />
  <Button
    active={false}
    icon={null}
    label="BR"
    name="BR"
    onClick={[Function]}
    title="Line break (Shift+Enter)"
  />
</div>
`;

exports[`Toolbar #entityTypes 1`] = `
<div
  className="editor__toolbar"
  role="toolbar"
>
  <div
    className="toolbar-group"
  />
  <div
    className="toolbar-group"
  />
  <Button
    active={false}
    icon={null}
    label="Test 1"
    name="TEST_1"
    onClick={[Function]}
    title={null}
  />
  <Button
    active={false}
    icon="icon-test-2"
    label="Test 2"
    name="TEST_2"
    onClick={[Function]}
    title={null}
  />
  <Button
    active={false}
    icon="icon-test-3"
    label="Test 3"
    name="TEST_3"
    onClick={[Function]}
    title={null}
  />
</div>
`;

exports[`Toolbar #inlineStyles 1`] = `
<div
  className="editor__toolbar"
  role="toolbar"
>
  <div
    className="toolbar-group"
  >
    <Button
      active={false}
      icon={null}
      label="Test 1"
      name="TEST_1"
      onClick={[Function]}
      title={null}
    />
    <Button
      active={false}
      icon="icon-test-2"
      label="Test 2"
      name="TEST_2"
      onClick={[Function]}
      title={null}
    />
    <Button
      active={false}
      icon="icon-test-3"
      label="Test 3"
      name="TEST_3"
      onClick={[Function]}
      title={null}
    />
  </div>
  <div
    className="toolbar-group"
  />
</div>
`;

exports[`Toolbar empty 1`] = `
<div
  className="editor__toolbar"
  role="toolbar"
>
  <div
    className="toolbar-group"
  />
  <div
    className="toolbar-group"
  />
</div>
`;
